[package]
name = "sommelier_api"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
ocular = { path = "../ocular" }
# ocular = { git = "https://github.com/peggyjv/ocular", branch = "v1.0.0" }
eyre = "0.6.8"
abscissa_tokio = "0.6.0"
lazy_static = "1.4.0"

[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"

