[package]
name = "sommstats"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
ocular = "1.0.0-beta-0.0.1"
eyre = "0.6.8"
abscissa_tokio = "0.6.0"
lazy_static = "1.4.0"
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0.91"
axum = "0.6.4"
assay = "0.1.1"
tokio-retry = "0.3.0"

[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"

